--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng6",
+  "name": "awesome-ngb",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -8,7 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "release": "standard-version -a -m \"release: cut the v%s release\"",
+    "release-r": "standard-version -a -m \"release: cut the v%s release\" -r "
   },
   "private": true,
   "dependencies": {
@@ -27,10 +29,9 @@
     "zone.js": "^0.8.24"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.1",
     "@angular-devkit/build-angular": "~0.5.0",
-    "typescript": "~2.7.2",
     "@angular/cli": "6.0.1",
+    "@angular/compiler-cli": "^6.0.1",
     "@angular/language-service": "^6.0.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -44,7 +45,23 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "standard-version": "^4.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
-  }
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.0.0-rc.6.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ewinchen/awesome-ngb.git"
+  },
+  "keywords": [
+    "ng6",
+    "bootstrap4"
+  ],
+  "author": "Edwin Chen",
+  "bugs": {
+    "url": "https://github.com/ewinchen/awesome-ngb/issues"
+  },
+  "homepage": "https://github.com/ewinchen/awesome-ngb#readme"
 }
