--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.1",
     "@angular/platform-browser-dynamic": "^6.0.1",
     "@angular/router": "^6.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.1.0",
