--- a/angular.json
+++ b/angular.json
@@ -9,8 +9,7 @@
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true
+          "styleext": "scss"
         }
       },
       "architect": {
